--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ html{
 
   <section class="home">
     <div>
-      <h3><a href="/Users/meganschmid/Desktop/web dev/Portfolio/portfolio.html">portfolio</a>•<a href="/Users/meganschmid/Desktop/web dev/Portfolio/courses.html">course list</a>•<button type="submit" onclick="window.open('MSresume.pdf')">resume</button></h3>
+      <h3><a href="portfolio.html">portfolio</a>•<a href="courses.html">course list</a>•<button type="submit" onclick="window.open('MSresume.pdf')">resume</button></h3>
     </div>
   </section>
 
@@ -201,7 +201,7 @@ html{
 
   <section class="home">
     <div>
-      <h3><a href="/Users/meganschmid/Desktop/web dev/Portfolio/aboutMe.html">about me :)</a></h3>
+      <h3><a href="aboutMe.html">about me :)</a></h3>
     </div>
   </section>
 
