--- a/portfolio.html
+++ b/portfolio.html
@@ -197,10 +197,10 @@
   <div class="mainContent">
     <nav>
       <ul>
-        <li><a href="/Users/meganschmid/Desktop/web dev/Portfolio/index.html">home</a></li>
-        <li><a style="background:#394472" href="/Users/meganschmid/Desktop/web dev/Portfolio/portfolio.html">portfolio</a></li>
-        <li><a href="/Users/meganschmid/Desktop/web dev/Portfolio/courses.html">course list</a></li>
-        <li><a href="/Users/meganschmid/Desktop/web dev/Portfolio/aboutMe.html">about me</a></li>
+        <li><a href="./">home</a></li>
+        <li><a style="background:#394472" href="portfolio.html">portfolio</a></li>
+        <li><a href="courses.html">course list</a></li>
+        <li><a href="aboutMe.html">about me</a></li>
         <button type="submit" onclick="window.open('MSresume.pdf')">resume</button>
       </ul>
     </nav>
