--- a/courses.html
+++ b/courses.html
@@ -217,10 +217,10 @@
   <div class="mainContent">
     <nav>
       <ul>
-        <li><a href="https://megys.github.io/portfolio/">home</a></li>
-        <li><a href="portfolio/">portfolio</a></li>
-        <li><a style="background:#394472" href="./">course list</a></li>
-        <li><a href="aboutMe/">about me</a></li>
+        <li><a href="./">home</a></li>
+        <li><a href="portfolio.html">portfolio</a></li>
+        <li><a style="background:#394472" href="courses.html">course list</a></li>
+        <li><a href="aboutMe.html">about me</a></li>
         <button type="submit" onclick="window.open('MSresume.pdf')">resume</button>
       </ul>
     </nav>
