--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <body>
         <div class="main">
             <div class="header">
-                <div class="wrapper" style="display: flex">
-                    <div class="flexChild">
-                        <img style=width:250px src="assets/headshot.png" alt="a photo of Megan" />
+                <div class="flexBox">
+                    <div class="flexChild"> 
+                        <img src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
-                    <div class="flexChild" style="min-width: 350px">
+                    <div class="flexChild" style="width:350px">
                         <h1>hello! 💖</h1>
                         <h3>I'm Megan! Nice to meet you!</h3>
                         <div>
@@ -36,7 +36,7 @@
 
             </div>
 
-            <!-- <div id="portfolio" class="content">
+            <div id="portfolio" class="content">
                 <div>
                     <h2>projects</h2>
                     <div>
@@ -326,7 +326,7 @@
                         <li>I like learning languages! I studied Spanish in high school and Korean in college.</li>
                     </ul>
                 </div>
-            </div> -->
+            </div>
     
         </div>
         <br>
