--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header">
                 <div class="flexBox">
                     <div class="flexChild"> 
-                        <img src="assets/headshot.png" alt="a photo of Megan" />
+                        <img style="width:300px" src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
