--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="main">
             <div class="header">
                 <div class="flexBox">
-                    <div class="flexChild"> 
+                    <div style="width:300px" class="flexChild"> 
                         <img style="width:300px" src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
