--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div class="main">
             <div class="header">
                 <div class="flexBox">
-                    <div class="flexChild" style="width:300px;display:flex;justify-content: center;" > 
+                    <div style="width:300px" class="flexChild"> 
                         <img style="width:300px" src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
-                    <div class="flexChild" style="width:350px;display:flex;justify-content: center;">
+                    <div class="flexChild" style="width:350px">
                         <h1>hello! 💖</h1>
                         <h3>I'm Megan! Nice to meet you!</h3>
                         <div>
