--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
         <div class="main">
             <div class="header">
                 <div class="flexBox">
-                    <div style="width:300px; display:flex; flex-direction: column; align-items: center;" class="flexChild"> 
+                    <div class="flexChild" style="width:300px; align-items: center;"> 
                         <img style="width:300px" src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
-                    <div class="flexChild" style="width:350px">
-                        <h1>hello! 💖</h1>
-                        <h3>I'm Megan! Nice to meet you!</h3>
+                    <div class="flexChild" style="width:350px; justify-content: center;">
+                        <h1 style="margin-bottom:-15px">hello! 💖</h1>
+                        <h3 style="margin-bottom:-5px">I'm Megan! Nice to meet you!</h3>
                         <div>
                             <h3 style="margin-bottom:-20px;">UCLA Class of 2023</h3>
                             <h5>Linguistics & Computer Science, Korean</h5>
                         </div>
+                        <div>
                             <a href="#portfolio"><button class="button2">portfolio</button></a>
                             <button class="button2" type="submit" onclick="window.open('assets/MSresume.pdf')">resume</button>
                             <a href='https://www.linkedin.com/in/megan-schmid-4301561b3/' target="_blank"><button class="button2">linked in</button></a>
+                        </div>
                     </div>
                 </div>
 
