--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
 
     <body>
+        <div style="height:10px"></div>
         <div class="main">
             <div class="header">
                 <div class="flexBox">
