--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
-                    <div class="flexChild" style="width:350px; justify-content: center;">
+                    <div class="flexChild" style="justify-content: center;">
                         <h1 style="margin-bottom:-15px">hello! 💖</h1>
                         <h3 style="margin-bottom:-5px">I'm Megan! Nice to meet you!</h3>
                         <div>
@@ -32,7 +32,7 @@
                         <div>
                             <a href="#portfolio"><button class="button2">portfolio</button></a>
                             <button class="button2" type="submit" onclick="window.open('assets/MSresume.pdf')">resume</button>
-                            <a href='https://www.linkedin.com/in/megan-schmid-4301561b3/' target="_blank"><button class="button2">linked in</button></a>
+                            <a href='https://www.linkedin.com/in/megan-y-schmid/' target="_blank"><button class="button2">linked in</button></a>
                         </div>
                     </div>
                 </div>
@@ -262,8 +262,7 @@
 
                 <div>
                     <h2>coursework</h2>
-                    <p>A list of the classes I've taken at UCLA.</p>
-                    <p>Click to expand</p>
+                    <p>A list of the classes I've taken at UCLA! Click to expand.</p>
 
                     <h3 class="accordion">computer science</h3>
                     <div class="panel">
@@ -340,7 +339,6 @@
 
         <script>
             // toggle text
-
             var acc = document.getElementsByClassName("accordion");
             var i;
 
