Changes for testing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
             <div id="portfolio" class="content">
                 <div>
-                    <h2>projects</h2>
+                    <!-- <h2>projects</h2>
                     <div>
                         <h4 style="margin-bottom:-10px">Chat Tracker</h3>
                         <ul>
@@ -127,7 +127,7 @@
                                 Coded in C++
                             </li>
                         </ul>         
-                    </div>
+                    </div> -->
                 </div>
                 <br>
                 <hr>
@@ -205,7 +205,7 @@
                             <h5 class="accordion" style="margin-bottom:-5px;">Committee Officer (2020-2022)</h5>
                             <div class="panel">
                                 <p>
-                                    ACM Design is a committee within ACM at UCLA that handles design requests, design projects, and hosts tutorials related to 
+                                    ACM Design is a committee within the Association for Computing Machinery (ACM) at UCLA that handles design requests, design projects, and hosts tutorials related to 
                                     design and computer science.
                                 </p>
                                 <ul>
@@ -226,12 +226,12 @@
                     <br>
 
                     <div>
-                        <h3 style="margin-bottom:-10px">ACM Studio</h3>
+                        <h3 style="margin-bottom:-10px">ACM Studio (2021)</h3>
                         <div style="margin-left:30px;">
                             <h5 class="accordion" style="margin-bottom:-5px;">Game Developer (2021)</h5>
                             <div class="panel">
                                 <p>
-                                    ACM Studio is a committee within ACM at UCLA that creates games and hosts tutorials on game development.
+                                    ACM Studio is a committee within the Association for Computing Machinery (ACM) at UCLA that creates games and hosts tutorials on game development.
                                 </p>
                                 <ul>
                                     <li>
