Redesigned project info display

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div class="main">
             <div class="header">
                 <div class="flexBox">
-                    <div class="flexChild" style="width:300px; align-items: center;"> 
+                    <div class="flexChild" style="width:300px; align-items: center; padding: 10px 15px 10px 40px"> 
                         <img style="width:300px" src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
-                    <div class="flexChild" style="justify-content: center;">
+                    <div class="flexChild" style="justify-content: center; padding: 10px 40px 10px 15px">
                         <h1 style="margin-bottom:-15px">hello!</h1>
                         <h3 style="margin-bottom:-5px">I'm Megan! Nice to meet you!</h3>
                         <div>
@@ -41,93 +41,90 @@
 
             <div id="portfolio" class="content">
                 <div>
-                    <!-- <h2>projects</h2>
+                    <h2>projects</h2>
                     <div>
-                        <h4 style="margin-bottom:-10px">Chat Tracker</h3>
-                        <ul>
-                            <li>
-                                Tracks each user’s current chat, their total active chats, and their total contributions to each chat & each chat’s total
-                                number of users and contributions
-                            </li>
-                            <li>
-                                Utilizes hash tables and linked lists in order to efficiently handle up to 20,000 users and 20,000 chats
-                            </li>
-                            <li>
-                                Coded in C++
-                            </li>
-                        </ul>
+                        <h3 style="margin-bottom:-10px">Habitude</h3>
+                        <h5 class="tag">WEB DEVELOPMENT</h5>
+                        <p>
+                            Habitude is a web-based habit tracker that users can use to keep track of their daily goals through creating custom habits. 
+                            They will be able to view their habit upkeep through a calendar system which displays which days out of the year they completed their habit.
+                            <a onclick="window.open('assets/habitude.pdf')" style="cursor: pointer;">visit presentation</a>
+                        </p>
                     </div>
-                    <div>
-                        <h4 style="margin-bottom:-10px">ACM Design CSS Framework</h3>
-                        <ul>
-                            <li>
-                                Helped design a CSS framework for a styleguide template to be used when creating resources/websites for ACM at UCLA.
-                            </li>
-                        </ul>         
-                    </div>
-                    <div>
-                        <h4 style="margin-bottom:-10px"><a href="https://megys.github.io/how-to-site/" target="_blank">Ratatouille Recipe (a classic!)</a></h3>
-                        <ul>
-                            <li>
-                                My first attempt at a website! It details how to cook ratatouille.
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <br>
-                <hr>
+                    <br>
 
-                <div>
-                    <h2>games</h2>
                     <div>
-                        <h4 style="margin-bottom:-10px"><a href="https://keycard.itch.io/bubble-tea-in-quarantine" target="_blank">Bubble Tea in Quarantine</a></h3>
-                        <ul>
-                            <li>
-                                A visual novel about tea, boba, and coronavirus with 75+ downloads
-                            </li>
-                            <li>
-                                Implemented with Pokémon-esque fight mechanics
-                            </li>
-                            <li>
-                                Designed aspects of the UI and the graphics
-                            </li>
-                            <li>
-                                Coded in Python
-                            </li>
-                        </ul>         
+                        <h3 style="margin-bottom:-10px">Grades of Green</h3>
+                        <h5 class="tag">WEB DEVELOPMENT</h5>
+                        <p>
+                            Collaborated with Grades of Green as a developer to rebrand the non-profit organization’s website to facilitate user engagement and integrated a database for dynamic display of data.
+                            I participated in this project as an officer in ACM at UCLA's design committee.
+                        </p>
                     </div>
+                    <br>
+
                     <div>
-                        <h4 style="margin-bottom:-10px"><a href="https://volcanogirl.itch.io/wayfarer" target="_blank">Wayfarer</a></h3>
-                        <ul>
-                            <li>
-                                Deckbuilding puzzle game meets a wholesome story about friendship.
-                            <li>
-                                Club project worked on for 6 months with ACM Studio at UCLA.
-                            </li>
-                        </ul>         
+                        <h3 style="margin-bottom:-10px">CSS Framework</h3>
+                        <h5 class="tag">UX/UI</h5>
+                        <p>
+                            Contributed to the creation of a CSS stylesheet according to ACM at UCLA’s branding guidelines to unify and streamline the development of our online websites and resources.
+                            I participated in this project as an officer in ACM at UCLA's design committee.
+                            <a href="https://github.com/uclaacm/WestwoodCSS" target="_blank">visit github</a>
+                        </p>
                     </div>
+                    <br>
+
                     <div>
-                        <h4 style="margin-bottom:-10px"><a href="https://keycard.itch.io/enharmonic" target="_blank">Enharmonic</a></h3>
-                        <ul>
-                            <li>
-                                Visual novel about art, love, and angst.
-                            </li>
-                        </ul>         
+                        <h3 style="margin-bottom:-10px">CCLE App Redesign</h3>
+                        <h5 class="tag">UX/UI</h5>
+                        <p>
+                            Created prototypes for an updated mobile version of UCLA's school engine, CCLE. 
+                            I participated in this project as a member of the Bruin Women in Business tech committee.
+                            <a onclick="window.open('assets/ccle.pdf')" style="cursor: pointer;">visit presentation</a>
+                        </p>
                     </div>
+                    <br>
+
                     <div>
-                        <h4 style="margin-bottom:-10px">Dungeon RPG</h3>
-                        <ul>
-                            <li>
-                                A randomly generated multi-level dungeon RPG with various mobs and weapons run through Xcode
-                            </li>
-                            <li>
-                                Utilizes recursive functions for mob movement, class inheritance, and vectors
-                            </li>
-                            <li>
-                                Coded in C++
-                            </li>
-                        </ul>         
-                    </div> -->
+                        <h3 style="margin-bottom:-10px">Bubble Tea in Quarantine</h3>
+                            <h5 class="tag">GAME DEVELOPMENT - 100+ downloads</h5>
+                            <p>
+                                A visual novel about tea, boba, and coronavirus with a twist—you fight coronavirus itself! 
+                                Individually developed and implemented with Pokémon-esque fight mechanics.
+                                <a href="https://keycard.itch.io/bubble-tea-in-quarantine" target="_blank">visit game site</a>
+                            </p>
+                    </div>
+                    <br>
+
+                    <div>
+                        <h3 style="margin-bottom:-10px">Wayfarer</h3>
+                            <h5 class="tag">GAME DEVELOPMENT - 395 browser plays & 14 downloads</h5>
+                            <p>
+                                A deckbuilding puzzle game meets a wholesome story about friendship! 
+                                I used Unity to develop the visual novel interface as a game developer during ACM Studio’s 6 month long student led game development project.
+                                <a href="https://volcanogirl.itch.io/wayfarer" target="_blank">visit game site</a>
+                            </p>
+                    </div>
+                    <br>
+
+                    <div>
+                        <h3 style="margin-bottom:-10px">Enharmonic</h3>
+                            <h5 class="tag">GAME DEVELOPMENT - 96 downloads</h5>
+                            <p>
+                                A visual novel about art, love, and angst. Created with @monicasivart based off of her webtoon concept and original characters. 
+                                <a href="https://keycard.itch.io/enharmonic" target="_blank" >visit game site</a>
+                            </p>       
+                    </div>
+                    <br>
+
+                    <div>
+                        <h3 style="margin-bottom:-10px">Dungeon RPG</h3>
+                            <h5 class="tag">GAME DEVELOPMENT</h5>
+                            <p>
+                                A randomly generated multi-level dungeon RPG with various mobs and weapons run through Xcode. It utilizes recursive functions for mob movement, class inheritance, and vectors; and was coded in C++.
+                            </p>
+                    </div>
+                    <br>
                 </div>
                 <br>
                 <hr>
@@ -333,9 +330,39 @@
 
                 <div id="aboutMe">
                     <h2>about me</h2>
-                    <h4>
-                        Hello! My name is Megan, and I’m a third year at UCLA double majoring in Linguistics & Computer Science and Korean. I’ll be studying abroad in South Korea at Yonsei University this spring semester, and afterwards I’ll be returning to work at Microsoft this summer as a PM Intern under GEO.
-                    </h4>
+                    <div>
+                        <h4>
+                            Hello! My name is Megan, and I’m a third year at UCLA double majoring in Linguistics & Computer Science and Korean.
+                            Nice to meet you! :)
+                            <br><br>
+                            I love investing myself in projects for social good and in creative storytelling pursuits! 
+                            I'm passionate about service and tech: web development, game development, and exploring and discovering more fields within the industry.
+                            <br><br>
+                        </h4>        
+                    </div>
+                    <div class="flexBox" style="justify-content: center;">
+                        <div class="flexChild" style="width: 180px;">
+                            <img style="width:180px; margin-bottom: -15px;" src="assets/seattle.png" alt="a photo of Megan on the Space Needle" />
+                            <h5 style="text-align: center; margin-right: 5px; font-size: smaller">Me in Seattle!</h5>
+                        </div>
+                        <div class="flexChild" style="width: 180px;">
+                            <img style="width:180px; margin-bottom: -15px;" src="assets/ratatouille.png" alt="a photo of Megan on the Space Needle" />
+                            <h5 style="text-align: center; margin-right: 5px;font-size: smaller">Ratatouille attempt!</h5>
+                        </div>
+                        <div class="flexChild" style="width: 180px;">
+                            <img style="width:180px; margin-bottom: -15px;" src="assets/mayor.png" alt="a photo of Megan meeting the dog mayor, Mayor Max" />
+                            <h5 style="text-align: center; margin-right: 5px;font-size: smaller">Meeting Mayor Max!</h5>
+                        </div>
+                    </div>
+                        
+                    <br>
+                    <div>
+                        <p style="text-align: center;">
+                            Also, if you're interested in seeing my first attempt at a website site, <a href="https://megys.github.io/how-to-site/" target="_blank">click here!</a>
+                        </p>
+                    </div>
+                    <br>
+                    <h3 style="text-align: center;margin-bottom:-5px">I hope you enjoyed learning a bit about me and my projects!<br> Thanks for reading!</h3>
                 </div>
             </div>
     
