--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                             <h5 style="text-align: center; margin-right: 5px; font-size: smaller">Me in Seattle!</h5>
                         </div>
                         <div class="flexChild" style="width: 180px;">
-                            <img style="width:180px; margin-bottom: -15px;" src="assets/ratatouille.png" alt="a photo of Megan on the Space Needle" />
+                            <img style="width:180px; margin-bottom: -15px;" src="assets/ratatouille.png" alt="a photo of two plates of ratatouille" />
                             <h5 style="text-align: center; margin-right: 5px;font-size: smaller">Ratatouille attempt!</h5>
                         </div>
                         <div class="flexChild" style="width: 180px;">
