Fixed padding header

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div style="height:10px"></div>
         <div class="main">
             <div class="header">
-                <div class="flexBox">
-                    <div class="flexChild" style="width:300px; align-items: center; padding: 10px 15px 10px 40px"> 
+                <div class="flexBox" style="padding: 25px">
+                    <div class="flexChild" style="width:300px; align-items: center; padding: 10px 15px 10px 15px"> 
                         <img style="width:300px" src="assets/headshot.png" alt="a photo of Megan" />
                         <br>
                         <a href="#aboutMe"><button class="button1">♡ about me ♡</button></a>
                     </div>
-                    <div class="flexChild" style="justify-content: center; padding: 10px 40px 10px 15px">
+                    <div class="flexChild" style="justify-content: center; padding: 10px 15px 10px 15px">
                         <h1 style="margin-bottom:-15px">hello!</h1>
                         <h3 style="margin-bottom:-5px">I'm Megan! Nice to meet you!</h3>
                         <div>
