Added Memory Train

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                     <div>
                         <h3 style="margin-bottom:-10px">Wayfarer</h3>
-                            <h5 class="tag">GAME DEVELOPMENT - 395 browser plays & 14 downloads</h5>
+                            <h5 class="tag">GAME DEVELOPMENT - 500+ browser plays & 14 downloads</h5>
                             <p>
                                 A deckbuilding puzzle game meets a wholesome story about friendship! 
                                 I used Unity to develop the visual novel interface as a game developer during ACM Studio’s 6 month long student led game development project.
@@ -109,9 +109,9 @@
 
                     <div>
                         <h3 style="margin-bottom:-10px">Enharmonic</h3>
-                            <h5 class="tag">GAME DEVELOPMENT - 96 downloads</h5>
+                            <h5 class="tag">GAME DEVELOPMENT - 100+ downloads</h5>
                             <p>
-                                A visual novel about art, love, and angst. Created with @monicasivart based off of her webtoon concept and original characters. 
+                                A visual novel about art, love, and angst. Created with <a href="https://monicasivart0.wixsite.com/artwork" target="_blank">Monica Sivayavirojna</a> based off of her webtoon concept and original characters. 
                                 <a href="https://keycard.itch.io/enharmonic" target="_blank" >visit game site</a>
                             </p>       
                     </div>
@@ -124,6 +124,16 @@
                                 A randomly generated multi-level dungeon RPG with various mobs and weapons run through Xcode. It utilizes recursive functions for mob movement, class inheritance, and vectors; and was coded in C++.
                             </p>
                     </div>
+                    <!-- creating creative contents -->
+                    <br>
+                    <div id="creatingCreativeContents">
+                        <h3 style="margin-bottom:-10px">Memory Train</h3>
+                            <h5 class="tag">GAME DEVELOPMENT</h5>
+                            <p>
+                                A docugame on dementia and caretakers of dementia patients, created to raise awareness and educate players. The game takes place on a train where the player character interacts with 3 different characters, who end up being the same character at different stages of their life, and learns clues about their lives (or life).
+                            </p>
+                    </div>
+                    <!-- creating creative contents -->
                     <br>
                 </div>
                 <br>
@@ -243,7 +253,7 @@
                     <hr>
 
                     <div>
-                        <h2>volunteering</h2>
+                        <h2>service</h2>
                         <div>
                             <h3 style="margin-bottom:-10px">Liberty in North Korea</h3>
                                 <div style="margin-left:30px;">
