updates bc of career advancements

--- a/index.html
+++ b/index.html
@@ -146,7 +146,17 @@
                             <div style="margin-left:30px;">
                                 <h5 class="accordion" style="margin-bottom:-5px;">PM Intern (2022)</h5>
                                 <div class="panel">
-                                    <p>Incoming this summer!</p>
+                                    <ul>
+                                        <li>
+                                            Strategized and executed a filter and sort by feature refresh for the Xbox storefronts
+                                        </li>
+                                        <li>
+                                            Created a strategy to increase the visibility and discoverability of self-published games on the Xbox storefronts
+                                        </li>
+                                        <li>
+                                            Owned the browse all games feature for Xbox.com
+                                        </li>
+                                    </ul>
                                 </div>
                                 <h5 class="accordion" style="margin-bottom:-5px;">Explore Intern (2021)</h5>
                                 <div class="panel">
@@ -257,11 +267,25 @@
                         <div>
                             <h3 style="margin-bottom:-10px">Liberty in North Korea</h3>
                                 <div style="margin-left:30px;">
-                                    <h5 class="accordion" style="margin-bottom:-5px;">Fundraising Director (2021-2022)</h5>
+                                    <h5 class="accordion" style="margin-bottom:-5px;">President (2022-2023)</h5>
                                     <div class="panel">
                                         <p>
                                             Liberty in North Korea is an international NGO working with the North Korean people as they achieve their liberty. LiNK helps North Korean refugees escape through a 3,000-mile secret rescue route and empowers North Koreans who have reached freedom to be changemakers, advocates, and leaders on this issue.
                                         </p>
+                                        <ul>
+                                            <li>
+                                                Presided as the main correspondent with a large non-profit organization
+                                            </li>
+                                            <li>
+                                                Established the Rescue Team's overall objectives and timeline for each quarter
+                                            </li>
+                                            <li>
+                                                Delegated responsibilities and supported the work efforts and contributions of individual club members
+                                            </li>
+                                        </ul>    
+                                    </div>
+                                    <h5 class="accordion" style="margin-bottom:-5px;">Fundraising Director (2021-2022)</h5>
+                                    <div class="panel">
                                         <ul>
                                             <li>
                                                 Coordinated the development of fundraisers and events for the club
@@ -342,7 +366,7 @@
                     <h2>about me</h2>
                     <div>
                         <h4>
-                            Hello! My name is Megan, and I’m a third year at UCLA double majoring in Linguistics & Computer Science and Korean.
+                            Hello! My name is Megan, and I’m a fourth year at UCLA double majoring in Linguistics & Computer Science and Korean.
                             Nice to meet you! :)
                             <br><br>
                             I love investing myself in projects for social good and in creative storytelling pursuits! 
